--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -20,6 +20,110 @@ html {
     justify-content: center;
 }
 
+/*nav Bar*/
+#nav-bar {
+    height: auto;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
+
+.nav-bar {
+    background-color: #2F173C;
+    left: 0;
+    top: 0;
+    padding: 1rem 5rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-bar .brand a { 
+    font-family:  Helvetica, sans-serif;
+    font-size: 3rem;
+    color: #fff;
+}
+
+.nav-bar .nac-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* .nav-bar .nav-list .hamburger {
+    border: 2xp solid white;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 70px;
+    transition: .3s ease all;
+} */
+/* .nav-bar .nav-list .hamburger .bar {
+    height: 2px;
+    width: 30px;
+    background-color: white;
+    position: relative;
+    display: flex;
+} */
+/* .nav-bar .nav-list .hamburger .bar::before, */
+.nav-bar .nav-list .hamburger .bar::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    transition: .3s ease all;
+}
+.nav-bar .nav-list .hamburger .bar::before {
+    top: 8px;
+}
+/* .nav-bar .nav-list .hamburger .bar::after {
+    bottom: 8px;
+} */
+.nav-bar .nav-list ul {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: #2F173C;
+    padding: 5rem 0;
+    /* transform: translateY(-100%); */
+    transition: .3s ease transform;
+    text-align: center;
+}
+.nav-bar .nav-list ul li {
+    list-style: none;
+    display: block;
+    position: relative;
+}
+.nav-bar .nav-list ul li:hover:after {
+    transform: translateX(-50%) scale(1);
+}
+.nav-bar .nav-list ul li:after {
+    content: '';
+    position: absolute;
+    width: 5rem;
+    height: .2rem;
+    background-color: #fff;
+    left: 50%;
+    transform: translateX(-50%) scale(0);
+    bottom: 0;
+    transition: .3s ease transform;
+}
+.nav-bar .nav-list ul li a {
+    font-size: 1.8rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    display: block;
+    padding: .5rem 0;
+    letter-spacing: .15rem;
+}
+/*Nav Bar end*/
+
 /* Hero Section*/
 .hero {
     min-height: 80vh;
@@ -43,20 +147,18 @@ html {
     font-weight: 500;
     letter-spacing: 1.1rem;
     color: #2F173C;
+    position: relative;
+    text-align: center;
+    transform: translate(50% -50%);
 }
 
 .hero .hero-info .hero-heading-2 {
     font-size: 10rem;
     font-weight: 1000;
     color: #2F173C;
-}
-
-.hero .logo {
-    width: 50%;
-    height: 50%;
-    margin-bottom: 3rem;
-    background-repeat: no-repeat; 
-    position: absolute;
+    position: relative;
+    text-align: center;
+    transform: translate(50% -50%);
 }
 
 /* Hero Section End*/
@@ -100,7 +202,6 @@ html {
     margin-bottom: 20px;
 }
 
-
 .about .about-img .about-img-wrapper{
     margin-top: 50px;
     height: auto;
@@ -126,6 +227,7 @@ html {
 }
 
 /* About section End*/
+
 
 /*Work Section*/
 .work {
@@ -192,6 +294,7 @@ html {
     justify-content: center;
     background-color: #7be3f3;
     padding: 10px;
+    
 }
 
 .work .work-info .work .work-card .work-back {
@@ -243,3 +346,90 @@ html {
 }*/
 
 /*Work Section End*/
+
+/*Footer*/
+.footer {
+    min-height: 10vh;
+    width: 100%;
+    background-color: #2F173C;
+    color: #fff;
+    flex-direction: column;
+    text-align: center;
+    padding: 5rem;
+}
+
+.footer .footer-contact {
+    padding: 20px;
+}
+
+.footer .footer-contact .footer-contact-heading {
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+}
+
+.footer .footer-contact .footer-contact-info {
+    font-size: 1.4rem;
+    padding-top: 10px;
+    letter-spacing: .2rem;
+}
+
+/* Media query Desktop and tab*/
+@media only screen and (min-width:768px){
+    .hero {
+        height: 100vh;
+        flex-direction: row;
+        padding-left: 10%;
+        justify-content: center;
+        align-items: center;
+    }
+    .hero .hero-info {
+        max-width: 30%;
+        text-align: left;
+    }
+    .hero .hero-info .hero-info-heading-1 {
+        font-size: 1.3rem;
+        letter-spacing: .5rem;
+    }
+    .hero .hero-info .hero-info-heading-2 {
+        font-size: 1.3rem;
+        letter-spacing: .5rem;
+    }
+    .hero .hero-image {
+        min-width: 400px;
+        max-width: 1000px;
+    }
+    .about {
+        width: 80%;
+        margin: 0 auto;
+        flex-direction: row;
+    }
+    .about .about-info {
+        width: 50%;
+        text-align: left;
+        padding: 17rem;
+    }
+    .work .work-header .work-header-description {
+        max-width: 500px;
+        margin: 0 auto;    
+    }
+    .work .work-info {
+        flex-direction: row;
+        width: 80%;
+    }
+    .work .work-info .work {
+        margin: 0;
+    }
+}
+/* Media query Desktop and tab End*/
+
+/*Madia query Desktop*/
+@media only screen and (min-width:1200px) {
+    .hero .hero-info .hero-info-heading-1 {
+        font-size: 6rem;
+    }
+    .hero .hero-info .hero-info-heading-1 {
+        font-size: 8rem;
+    }
+}
