--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -26,10 +26,11 @@ html {
     width: 100%;
     position: fixed;
     z-index: 100;
+    background-color: #2F173C;
 }
 
 .nav-bar {
-    background-color: #2F173C;
+    
     left: 0;
     top: 0;
     padding: 1rem 5rem;
@@ -50,7 +51,7 @@ html {
     align-items: center;
     justify-content: center;
 }
-/* .nav-bar .nav-list .hamburger {
+.nav-bar .nav-list .hamburger {
     border: 2xp solid white;
     border-radius: 50px;
     display: flex;
@@ -59,30 +60,8 @@ html {
     height: 70px;
     width: 70px;
     transition: .3s ease all;
-} */
-/* .nav-bar .nav-list .hamburger .bar {
-    height: 2px;
-    width: 30px;
-    background-color: white;
-    position: relative;
-    display: flex;
-} */
-/* .nav-bar .nav-list .hamburger .bar::before, */
-.nav-bar .nav-list .hamburger .bar::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: white;
-    transition: .3s ease all;
 }
-.nav-bar .nav-list .hamburger .bar::before {
-    top: 8px;
-}
-/* .nav-bar .nav-list .hamburger .bar::after {
-    bottom: 8px;
-} */
+
 .nav-bar .nav-list ul {
     position: absolute;
     width: 100%;
@@ -90,7 +69,6 @@ html {
     left: 0;
     background-color: #2F173C;
     padding: 5rem 0;
-    /* transform: translateY(-100%); */
     transition: .3s ease transform;
     text-align: center;
 }
@@ -119,7 +97,7 @@ html {
     text-transform: uppercase;
     color: #fff;
     display: block;
-    padding: .5rem 0;
+    padding: .5rem 3rem;
     letter-spacing: .15rem;
 }
 /*Nav Bar end*/
@@ -128,7 +106,7 @@ html {
 .hero {
     min-height: 80vh;
     width: 100%;
-    padding-top: 50px;
+    padding-top: 10px;
     justify-content: center;
     background-color: #fff;
     display: flex;
@@ -136,6 +114,7 @@ html {
     justify-content: center;
     align-items: center;
 }
+
 
 .hero .hero-info {
     width: 100%;
@@ -168,7 +147,7 @@ html {
 .about {
     width: 100%;
     min-width: 50vh;
-    padding: 10rem 5rem;
+    padding: 0rem 1rem;
     flex-direction: column;
 }
 
@@ -271,6 +250,35 @@ html {
     margin: 5px;
 }
 
+.work .work-header .work-links .Horiseon {
+    padding: 1.6rem;
+    display: inline-block;
+    background-color: #2F173C;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1 rem;
+    text-transform: none;
+    letter-spacing: .2rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.work .work-header .work-links .Portfolio {
+    padding: 1.6rem;
+    display: inline-block;
+    background-color: #2F173C;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1 rem;
+    text-transform: none;
+    letter-spacing: .2rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.work .work-header .work-links li{
+    display: inline-block;
+}
+
 .work .work-info .work .work-card {
     position: absolute;
     height: 100%;
@@ -323,27 +331,18 @@ html {
      text-align: center;
 }
 
-/*.work .work-info .work:nth-child(1) .work-card .work-front {
-     background-image: url(.assets/.Images/.art_webpage.png);
-     background-size: cover;
-     position: relative;
-     color: #fff;
-}
-
-.work .work-info .work:nth-child(1) .work-card .work-front::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    z-index: -1;
-}
-
-.work .work-info .work:nth-child(1) .work-card .work-front i {
+.work .work-info .work .work-card .work-back .work-github {
+    padding: 1.6rem;
+    display: inline-block;
+    background-color: #2F173C;
     color: #fff;
-}*/
+    text-decoration: none;
+    font-size: 1 rem;
+    text-transform: none;
+    letter-spacing: .2rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 /*Work Section End*/
 
@@ -377,6 +376,22 @@ html {
 
 /* Media query Desktop and tab*/
 @media only screen and (min-width:768px){
+    .nav-bar {
+        width: 80%;
+    }
+
+    .nav-bar .nav-list ul {
+        transform: translateX(0);
+        position: initial;
+        padding: 0;
+        z-index: initial;
+        background-color: transparent;
+    }
+    
+    .nav-bar .nav-list ul li {
+        display: inline-block;
+    }
+
     .hero {
         height: 100vh;
         flex-direction: row;
@@ -420,6 +435,7 @@ html {
     }
     .work .work-info .work {
         margin: 0;
+        padding-bottom: 10rem;
     }
 }
 /* Media query Desktop and tab End*/
@@ -431,5 +447,9 @@ html {
     }
     .hero .hero-info .hero-info-heading-1 {
         font-size: 8rem;
+    }
+    .work .work-info .work {
+        margin: 0;
+        padding-bottom: 10rem;
     }
 }
